🔧 Simplify app_prod.py - standalone version with minimal dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,4 @@
-streamlit>=1.28.0
-python-dotenv
-langchain
-langchain-community
-langchain-core
-langchain-text-splitters
-langchain-groq
-numpy
-faiss-cpu
-sentence-transformers
-huggingface-hub
+streamlit
 PyPDF2
-plotly
-pandas
-requests
+langchain-groq
+python-dotenv
